--- a/app/src/main/res/layout/all_locked_offer_alert.xml
+++ b/app/src/main/res/layout/all_locked_offer_alert.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black_trans">
 
     <ScrollView
@@ -14,122 +14,123 @@
             android:layout_height="match_parent"
             android:layout_gravity="center">
 
-        <RelativeLayout
-            android:background="@drawable/dialog_ratings"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/tvAlertMsg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:text="@string/all_locked_offer"
-                android:textColor="#171717"
-                android:textSize="14dp" />
-            <TextView
-                android:id="@+id/rezqplus"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_below="@+id/tvAlertMsg"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:textAllCaps="true"
-                android:text="@string/rezq_plus_offer"
-                android:textColor="@color/holo_green"
-                android:textSize="14dp" />
-            <LinearLayout
-                android:id="@+id/hotel"
-                android:layout_width="match_parent"
-                android:layout_below="@+id/rezqplus"
-                android:orientation="vertical"
-                android:layout_marginTop="10dp"
-                android:layout_height="wrap_content">
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerRezqplus"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </androidx.recyclerview.widget.RecyclerView>
-
-            </LinearLayout>
-
-
             <RelativeLayout
-                android:id="@+id/rr"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/hotel"
-                android:layout_marginTop="39dp"
-                android:gravity="center">
+                android:layout_height="match_parent"
+                android:background="@drawable/dialog_ratings">
 
-                <TextView
-                    android:id="@+id/primeOffer"
+                <com.sa.rezq.view.AppTextView
+                    android:id="@+id/tvAlertMsg"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
-                    android:textAllCaps="true"
-                    android:text="@string/prime_offer"
-                    android:textColor="@color/red"
-                    android:textSize="14dp" />
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerPrimeOffer"
-                    android:layout_below="@id/primeOffer"
-                    android:layout_marginTop="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </androidx.recyclerview.widget.RecyclerView>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="63dp"
-                android:background="@color/red"
-                android:layout_marginTop="20dp"
-                android:gravity="center_vertical"
-                android:layout_below="@+id/rr"
-                android:layout_alignParentBottom="true">
-                <TextView
-                    android:layout_width="163dp"
-                    android:layout_height="wrap_content"
+                    android:text="@string/all_locked_offer"
+                    android:textColor="#171717"
                     android:textSize="14dp"
-                    android:gravity="center"
-                    android:layout_marginLeft="15dp"
-                    android:textColor="@color/white"
-                    android:text="@string/prime_members"/>
-                <Button
-                    android:id="@+id/btnReedem"
-                    android:layout_width="91dp"
-                    android:layout_height="26dp"
-                    android:gravity="center"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:text="@string/upgrade"
+                    android:textStyle="bold" />
+
+                <com.sa.rezq.view.AppTextView
+                    android:id="@+id/rezqplus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvAlertMsg"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/rezq_plus_offer"
                     android:textAllCaps="true"
-                    android:background="@drawable/off_border"
-                    android:textColor="@color/red"
-                    android:textSize="12dp" />
+                    android:textColor="@color/holo_green"
+                    android:textSize="14dp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:id="@+id/hotel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/rezqplus"
+                    android:layout_marginTop="10dp"
+                    android:orientation="vertical">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerRezqplus"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+                </LinearLayout>
+
+
+                <RelativeLayout
+                    android:id="@+id/rr"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/hotel"
+                    android:layout_marginTop="39dp"
+                    android:gravity="center">
+
+                    <com.sa.rezq.view.AppTextView
+                        android:id="@+id/primeOffer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/prime_offer"
+                        android:textAllCaps="true"
+                        android:textColor="@color/red"
+                        android:textSize="14dp"
+                        android:textStyle="bold" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerPrimeOffer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/primeOffer"
+                        android:layout_marginTop="5dp">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="63dp"
+                    android:layout_below="@+id/rr"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/red"
+                    android:gravity="center_vertical">
+
+                    <com.sa.rezq.view.AppTextView
+                        android:layout_width="163dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:gravity="center"
+                        android:text="@string/prime_members"
+                        android:textColor="@color/white"
+                        android:textSize="14dp" />
+
+                    <com.sa.rezq.view.AppButton
+                        android:id="@+id/btnReedem"
+                        android:layout_width="91dp"
+                        android:layout_height="26dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginRight="40dp"
+                        android:background="@drawable/off_border"
+                        android:gravity="center"
+                        android:text="@string/upgrade"
+                        android:textAllCaps="true"
+                        android:textColor="@color/red"
+                        android:textSize="12dp" />
+
+                </RelativeLayout>
+
 
             </RelativeLayout>
-
-
-
-
 
 
         </RelativeLayout>
-
-
-
-    </RelativeLayout>
 
     </ScrollView>
 
