--- a/app/src/main/res/layout/rating_and_review_activity.xml
+++ b/app/src/main/res/layout/rating_and_review_activity.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools">
 
@@ -10,10 +12,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:id="@+id/profile_image"
                 android:layout_gravity="center"
-                android:background="@color/holo_green"
                 android:layout_width="45dp"
                 android:layout_height="45dp" />
             <LinearLayout
@@ -38,14 +39,14 @@
                     android:gravity="center"
                     android:layout_marginTop="5dp"
                     android:orientation="horizontal">
-                    <com.sa.rezq.view.AppTextView
+                    <androidx.appcompat.widget.AppCompatRatingBar
                         android:id="@+id/tv_rating"
                         android:layout_marginLeft="15dp"
+                        style="@style/Widget.AppCompat.RatingBar.Small"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:background="@color/yellow"
                         android:layout_below="@+id/Tvuser_name"
-                        android:progressTint="#FFB400"
+                        android:progressTint="@color/yellow"
                         android:rating="4"
                         android:stepSize="1" />
                     <com.sa.rezq.view.AppTextView
