--- a/app/src/main/res/layout/vendor_store_list_recyclerview_data.xml
+++ b/app/src/main/res/layout/vendor_store_list_recyclerview_data.xml
@@ -13,6 +13,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cardItem_main_item"
             android:layout_width="match_parent"
+            app:cardBackgroundColor="@color/black_trans"
             android:layout_height="match_parent"
             app:cardCornerRadius="10dp">
 
@@ -33,7 +34,7 @@
                     android:layout_marginTop="@dimen/_60sdp"
                     android:text=""
                     android:gravity="center"
-                    android:textColor="@color/white"
+                    android:textColor="@color/holo_green"
                     android:textSize="12dp"
                     android:textStyle="bold" />
                 <LinearLayout
