--- a/app/src/main/res/layout/activity_add_account.xml
+++ b/app/src/main/res/layout/activity_add_account.xml
@@ -83,11 +83,10 @@
                         progressActivity:loadingBackgroundColor="@color/transparent"
                         progressActivity:loadingProgressBarColor="@color/green_light">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerview_account_list"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
-                    </androidx.recyclerview.widget.RecyclerView>
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerview_account_list"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
                     </com.vlonjatg.progressactivity.ProgressLinearLayout>
 
 
